syntax = "proto3";
package events;

option go_package = "./events";

message UnwrapRequestEvmProto {
    uint32 networkClass = 1;
    uint32 chainId = 2;
    uint64 blockNumber = 3;
    bytes blockHash = 4;
    bytes transactionHash = 5;
    uint32 logIndex = 6;
    bytes from = 7;
    string to = 8;
    bytes token = 9;
    bytes amount = 10;
    string signature = 11;
    uint32 redeemStatus = 12;
}