syntax = "proto3";
package events;

option go_package = "./events";

message WrapRequestZnnProto {
  uint32 networkType = 1;
  uint32 chainId = 2;
  bytes id = 3;
  string toAddress = 4;
  string tokenAddress = 5;
  bytes amount = 6;
  bytes fee = 7;
  string signature = 8;
  uint32 status = 9;
  bool sentSignature = 10;
}